--- a/grad2.css
+++ b/grad2.css
@@ -7,7 +7,7 @@ body{
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-    background: linear-gradient(to right, RGB(161, 160, 217), RGB(149, 15, 137));
+    background: linear-gradient(to right, rgb(213, 216, 62), rgb(13, 190, 13));
     }
      
     h1{
@@ -17,5 +17,5 @@ body{
         text-transform: uppercase;
         letter-spacing: .5em;
         width: 100%;
-        background-color: rgb(177, 224, 233);
+        background-color: rgb(195, 235, 143);
     }
