--- a/clockstyle.css
+++ b/clockstyle.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
 body {
-    background-image: url("images.jpg");
+    background-image: url("clocks_1024.jpg");
     background-size: contain;
 
 }
